<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/jaqgus"
        app:srcCompat="@drawable/jaq_gus" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:text="@string/jaqgus"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/textView11"
        android:layout_below="@+id/textView11"
        android:text="@string/distance"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginStart="24dp"
        android:text="@string/location"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


    <Button
        android:id="@+id/button7"
        style="@style/android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignTop="@+id/button8"
        android:layout_weight="1"
        android:background="@android:color/darker_gray"
        android:text="@string/back" />

    <Button
        android:id="@+id/button8"
        style="@style/android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="28dp"
        android:layout_weight="1"
        android:background="@android:color/darker_gray"
        android:text="@string/next" />
</RelativeLayout>
