<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/pink_dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/flounder"
        app:srcCompat="@drawable/flounder" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/flounder"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:fontFamily="@font/amatica_sc_bold"
        tools:fontFamily="@font/amatica_sc_bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:text="@string/location"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:fontFamily="@font/amatica_sc_bold"
        tools:fontFamily="@font/amatica_sc_bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:text="@string/distance"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:fontFamily="@font/amatica_sc_bold"
        tools:fontFamily="@font/amatica_sc_bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            style="@style/android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="65dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/back" />

        <Button
            android:id="@+id/button2"
            style="@style/android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="65dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:background="@android:color/darker_gray"
            android:text="@string/next" />
    </LinearLayout>
</LinearLayout>
