<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home">

    <LinearLayout
        android:layout_width="215dp"
        android:layout_height="372dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="SELECT A LAYOUT:"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:fontFamily="@font/amatica_sc_bold"
            tools:fontFamily="@font/amatica_sc_bold" />

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonCon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow_dark"
            android:text="@string/constraint"
            android:textSize="14sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonLin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pink_dark"
            android:text="@string/linear"
            android:textSize="14sp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonRel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/indigo_dark"
            android:text="@string/relative"
            android:textSize="14sp" />

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="?android:attr/listDivider"
            android:visibility="invisible" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
